syntax = "proto3";

package to_do.event.v1;

import "to_do/model/v1/to_do.proto";

message ToDosCreated {
  repeated to_do.model.v1.ToDo to_dos = 1;
}
